--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -377,7 +377,7 @@ workflows:
       - contexts:
           context: org-global-2
       - multi-contexts:
-          context: individual-local
+          context: individual-local-2
       - write_workspace
       - read_workspace:
           requires:
